--- a/Individual Project/main.css
+++ b/Individual Project/main.css
@@ -1,3 +1,3 @@
 hr {color: sienna;}
 p {margin-left: 20px;}
-body {background-image: url("/Individual Project/back.jpg");}
+body {background-image: url("/Individual Project/girl.jpg");}
