--- a/Individual Project/main.css
+++ b/Individual Project/main.css
@@ -2,4 +2,5 @@ body
 {
   background-image: url("/Individual Project/back.jpg");
   background-attachment:fixed；
+  background-size:1370px 571px;
 }
