--- a/Individual Project/main.css
+++ b/Individual Project/main.css
@@ -1,6 +1,6 @@
 body 
 {
   background-image: url("/Individual Project/back.jpg");
-  background-attachment:fixed；
+  background-attachment:fixed;
   background-size:1370px 571px;
 }
